Changes in footer

--- a/main.css
+++ b/main.css
@@ -416,6 +416,7 @@ span p{
     /* display: flex;
     justify-content: space-evenly; */
     margin: 0;
+    padding: 0;
 }
 
 .main-footer__item {
